tests/semantic/fail/infered-declaration3.tiger
let
	var x := "a"
in
	x := 1
end
